--- a/Crypto/100_1-broken_auth/docker-alice/Dockerfile
+++ b/Crypto/100_1-broken_auth/docker-alice/Dockerfile
@@ -2,7 +2,7 @@
 # sure you lock down to a specific version, not to `latest`!
 # See https://github.com/phusion/baseimage-docker/blob/master/Changelog.md for
 # a list of version numbers.
-FROM phusion/baseimage:0.9.11
+FROM phusion/baseimage:0.9.10
 
 # disable ssh
 RUN rm -rf /etc/service/sshd /etc/my_init.d/00_regen_ssh_host_keys.sh
@@ -12,15 +12,22 @@ ENV HOME /opt/ctf
 
 # create teamspeak user
 RUN adduser --system --home /opt/ctf ctf
+RUN mkdir -p /etc/service/ctf
+
+# Use baseimage-docker's init system.
+CMD ["/sbin/my_init"]
 
 RUN apt-get update
-RUN apt-get install -y gpg python python-pip
-RUN pip install Crypto python-gnupg
+RUN apt-get -y remove openssh-server
+RUN apt-get -y dist-upgrade
 
-# add teamspeak service
-RUN mkdir -p /etc/service/ctf
+#### Service specific config
+RUN apt-get install -y python python-setuptools
+RUN apt-get install -y gnupg python-crypto
+RUN easy_install python-gnupg
+
 ADD ctf.sh /etc/service/ctf/run
-ADD ../ba_server.py /opt/ctf
+ADD ba_server.py /opt/ctf/
 ADD Alice-gpg /opt/ctf/
 
 RUN chown -R ctf:nogroup /opt/ctf
@@ -29,6 +36,4 @@ RUN chown -R ctf:nogroup /opt/ctf
 # Clean up APT when done.
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-# Use baseimage-docker's init system.
-CMD ["/sbin/my_init"]
 EXPOSE 5668
