--- a/docker/apache-site.conf
+++ b/docker/apache-site.conf
@@ -1,4 +1,6 @@
 <VirtualHost *:80>
         DocumentRoot /var/www/
-        DirectoryIndex index.php
+        <Directory /var/www/>
+                DirectoryIndex index.php
+        </Directory>
 </VirtualHost>
