--- a/WEB/100_1/kochchef/.htaccess
+++ b/WEB/100_1/kochchef/.htaccess
@@ -1,7 +1,7 @@
 Options -Indexes
 
 RewriteEngine On
-RewriteBase /kochchef/
+RewriteBase /
 
 #comment out to keep trailing slashes
 RewriteRule ^(.+)/$ $1 [R=301,L]
